*lint *fixed date not showing